# bater

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.bak/: notify.rs
src/: App.css  App.tsx  common.tsx  icon.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  setup.rs  tray.rs  util.rs  window.rs
src/components/: Control.tsx  TopBar.tsx
src/css/: TopBar.css
src/page/: Home.tsx
src/util/: sleep.tsx  timestamp.tsx
src/util/notify/: index.tsx
src/util/notify/css/: Notify.css  NotifyCloseAll.css
src/util/notify/page/: Notify.tsx  NotifyCloseAll.tsx
src/util/tray/page/: Tray.tsx
