[package]
name = "bater"
version = "0.1.0"
description = "Bater"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [
    "process-all",
    "system-tray",
    "window-all",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

window-shadows = "0.2"
window-vibrancy = "0.4.0"

os_info = { version = "3", default-features = false }
mouse_position = "0.1.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
